Home page heading color contrast fix

--- a/css/index.css
+++ b/css/index.css
@@ -557,7 +557,7 @@ label {
 .promoted-articles__article {
   height: 100%;
   width: auto;
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 1.0);
   display: block;
   opacity: 0.75;
   overflow: hidden;
@@ -627,7 +627,7 @@ label {
 }
 
 .promoted-articles__title {
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 136, 0, 1.0);
   font-family: "Futura", Arial, Helvetica, sans-serif;
   font-size: 3rem;
   font-weight: 700;
@@ -636,10 +636,10 @@ label {
   text-transform: uppercase;
 }
 
-/* .promoted-articles__article:focus .promoted-articles__title,
+.promoted-articles__article:focus .promoted-articles__title,
 .promoted-articles__article:hover .promoted-articles__title {
-  color: rgba(255, 255, 255, 0.7);
-} */
+  color: rgba(255, 255, 255, 1.0);
+}
 
 .article-list {
   display: grid;
